docker-network/kubernetes/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.service.type: LoadBalancer
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.service.type: LoadBalancer
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/docker-network-default: "true"
        io.kompose.service: web
    spec:
      containers:
        - env:
            - name: MONGO_CONNECTION_STRING
              value: mongodb://db:27017
          image: btholt/node-app
          name: web
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
