docker-network/kubernetes/docker-network-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: docker-network-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/docker-network-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/docker-network-default: "true"
